Do not reinvent security. (#2)
Use spring-security instead.